format Description completed

--- a/my-project/src/app/components/addlabel/addlabel.component.html
+++ b/my-project/src/app/components/addlabel/addlabel.component.html
@@ -1,5 +1,10 @@
-<p class="para">Labels<button mat-button style="float:right" (click)=createLabel()>EDIT</button></p>
-<button mat-stroked-button (click)=createLabel() ><img class="img" src="../../../assets/images/label.svg" >Create new label</button>
+<p class="para">Labels
+  <button mat-button class="button" (click)=createLabel()>EDIT</button>
+</p>
+<button mat-stroked-button (click)=createLabel()>
+  <img class="img" src="../../../assets/images/label.svg">Create new label</button>
 <div *ngFor="let data of labelList">
-    <button mat-stroked-button (click)=labelClick(data)><img class="img" src="../../../assets/images/labelicon.svg"  >{{data.label}}</button><br>
+  <button mat-stroked-button (click)=labelClick(data)>
+    <img class="img" src="../../../assets/images/labelicon.svg">{{data.label}}</button>
+  <br>
 </div>
