--- a/my-project/src/app/components/change-color/change-color.component.css
+++ b/my-project/src/app/components/change-color/change-color.component.css
@@ -1,22 +1,111 @@
-.colorPalette {
+.colorPalette1{
   border-radius: 100%;
   outline: none;
   border: none;
   width: 30px;
   height: 30px;
+  background-color:#FAFAFA;
+}
+.colorPalette2{
+  border-radius: 100%;
+  outline: none;
+  border: none;
+  width: 30px;
+  height: 30px;
+  background-color: #FF8A80;
+}
+.colorPalette3{
+  border-radius: 100%;
+  outline: none;
+  border: none;
+  width: 30px;
+  height: 30px;
+  background-color:#FFD180;
+}
+.colorPalette4{
+  border-radius: 100%;
+  outline: none;
+  border: none;
+  width: 30px;
+  height: 30px;
+  background-color:#FFFF8D;
+}
+.colorPalette5{
+  border-radius: 100%;
+  outline: none;
+  border: none;
+  width: 30px;
+  height: 30px;
+  background-color:#CCFF90;
+}
+.colorPalette6{
+  border-radius: 100%;
+  outline: none;
+  border: none;
+  width: 30px;
+  height: 30px;
+  background-color:#A7FFEB;
+}
+.colorPalette7{
+  border-radius: 100%;
+  outline: none;
+  border: none;
+  width: 30px;
+  height: 30px;
+  background-color:#80D8FF;
+}
+.colorPalette8{
+  border-radius: 100%;
+  outline: none;
+  border: none;
+  width: 30px;
+  height: 30px;
+  background-color:#82B1FF;
+}
+.colorPalette9{
+  border-radius: 100%;
+  outline: none;
+  border: none;
+  width: 30px;
+  height: 30px;
+  background-color:#B388FF;
+}
+.colorPalette10{
+  border-radius: 100%;
+  outline: none;
+  border: none;
+  width: 30px;
+  height: 30px;
+  background-color:#F8BBD0;
+}
+.colorPalette11{
+  border-radius: 100%;
+  outline: none;
+  border: none;
+  width: 30px;
+  height: 30px;
+  background-color:#D7CCC8;
+}
+.colorPalette12{
+  border-radius: 100%;
+  outline: none;
+  border: none;
+  width: 30px;
+  height: 30px;
+  background-color:#CFD8DC;
+}
 
-}
-.fundoo33 {
-  margin-left: 0px;
-  opacity: 0.7;
-}
 .colorCard {
   left: 331px;
   margin-top: -692px;
   width: 160px;
   padding: 5px;
 }
-.colorDiv{
-  margin-bottom:5px;
-  display:flex;
+.colorDiv {
+  margin-bottom: 5px;
+  display: flex;
+}
+.col2
+{
+  background-color: #FF8A80;
 }
