--- a/my-project/src/app/components/search-bar/search-bar.component.html
+++ b/my-project/src/app/components/search-bar/search-bar.component.html
@@ -1,2 +1,3 @@
-
-<app-notes-collection [searchInput]="searchInput" [NoteArray]=notes>    </app-notes-collection>
+<!-- note card starts -->
+<app-notes-collection [searchInput]="searchInput" [NoteArray]=notes> </app-notes-collection>
+<!-- note card ends -->
