--- a/my-project/src/app/components/add-notes/add-notes.component.css
+++ b/my-project/src/app/components/add-notes/add-notes.component.css
@@ -1,29 +1,34 @@
-.matcard
-{
-    width: 600px;
-    margin-top: 7%;
-
-
+.matcard {
+  width: 600px;
+  margin-top: 7%;
 }
-.span{
-    top: 10px;
-    right: 0px;
-    position: absolute;
+.span {
+  top: 10px;
+  right: 0px;
+  position: absolute;
 }
 
-.div2{
-
-    outline: none;
-    width: 550px;
-    position: relative;
+.div2 {
+  outline: none;
+  width: 550px;
+  position: relative;
 }
 div:empty:before {
-    content:attr(data-text);
-    color:gray
-  }
+  content: attr(data-text);
+  color: gray;
+}
 
-.take_note{
-    padding-top: 12px;
-    padding-left: 14px;
-    padding-bottom: 0px
+.take_note {
+  padding-top: 12px;
+  padding-left: 14px;
+  padding-bottom: 0px;
+}
+.opacity {
+  opacity: 0.5;
+}
+.close {
+  float: right;
+}
+.div1 {
+  margin-top: 2%;
 }
