--- a/my-project/src/app/components/add-notes/add-notes.component.html
+++ b/my-project/src/app/components/add-notes/add-notes.component.html
@@ -1,73 +1,87 @@
-<div fxLayoutAlign="space-evenly center" style="margin-top:2%">
-    <mat-card class="matcard" *ngIf="note1">
-        <div data-text="Take a note..."  contenteditable="true" class="div2" (click)="note1=!note1">
+<div fxLayoutAlign="space-evenly center" class="div1">
+  <mat-card class="matcard" *ngIf="note1">
+    <div
+      data-text="Take a note..."
+      contenteditable="true"
+      class="div2"
+      (click)="note1 = !note1"
+    ></div>
+
+    <span class="span">
+      <button mat-icon-button><i class="material-icons">list</i></button>
+
+      <button mat-icon-button><i class="material-icons">photo</i></button>
+
+      <button mat-icon-button><i class="material-icons">edit</i></button>
+    </span>
+  </mat-card>
+
+  <mat-card
+    [ngStyle]="{ 'background-color': cardColor }"
+    class="matcard"
+    *ngIf="!note1"
+  >
+    <div fxLayout="row">
+      <div
+        data-text="Title"
+        id="title"
+        contenteditable="true"
+        class="div2"
+      ></div>
+      <div class="action">
+        <!-- pin starts -->
+        <app-pin (eventEmit)="eventpin($event)"></app-pin>
+        <!-- pin ends -->
+      </div>
+    </div>
+
+    <mat-card-content class="take_note">
+      <div
+        data-text="Take a note.."
+        id="description"
+        contenteditable="true"
+        class="div2"
+      ></div>
+    </mat-card-content>
+
+    <mat-card-actions flexLayout="row">
+      <mat-chip-list>
+        <div *ngFor="let label of labelName">
+          <mat-chip *ngIf="!label.isDeleted"
+            >{{ label.label }}
+            <mat-icon matChipRemove (click)="delete()">cancel</mat-icon>
+          </mat-chip>
         </div>
+      </mat-chip-list>
+      <!-- reminder starts -->
+      <app-reminder></app-reminder>
+      <!-- reminder ends -->
+      <!-- collaborator starts -->
+      <app-collaborator></app-collaborator>
+      <!-- collaborator  ends -->
+      <!-- color change starts -->
+      <app-change-color
+        (eventEmit)="eventOccuredcolor($event)"
+      ></app-change-color>
+      <!-- color change ends -->
+      <!-- add image starts -->
+      <app-add-image></app-add-image>
+      <!-- add image ends -->
+      <!-- archive starts -->
+      <app-archive (eventEmit)="eventOccured($event)"></app-archive>
+      <!-- archive ends -->
+      <!-- more starts -->
+      <app-more (labelEvent)="eventlabel($event)"></app-more>
+      <!-- more ends -->
 
-        <span class="span">
-          <button mat-icon-button>
-          <i class="material-icons" style="opacity: 0.5;">list</i>
-          </button>
-
-
-          <button mat-icon-button>
-          <i class="material-icons" style="opacity: 0.5;">photo</i>
-          </button>
-
-          <button mat-icon-button>
-          <i class="material-icons" style="opacity: 0.5;">edit</i>
-          </button>
-
-        </span>
-        </mat-card>
-
-        <mat-card [ngStyle]="{'background-color':cardColor}" class="matcard" *ngIf="!note1">
-            <mat-card-header>
-                <div data-text="Title" id="title" contenteditable="true" class="div2">
-                </div>
-                <span style="float:right;"><button mat-icon-button><img src="../../../assets/images/pin.svg"></button></span>
-            </mat-card-header>
-
-            <mat-card-content class="take_note">
-                <div data-text="Take a note.." id="description" contenteditable="true" class="div2">
-                </div>
-            </mat-card-content>
-
-            <mat-card-actions flexLayout="row">
-                <mat-chip-list>
-                    <div *ngFor="let label of labelName"><mat-chip *ngIf="!label.isDeleted">{{label.label}}
-                        <mat-icon matChipRemove (click)= delete()>cancel</mat-icon>
-                    </mat-chip></div>
-
-                  </mat-chip-list>
-              <button mat-icon-button>
-                <i class="material-icons" style="opacity: 0.5;"> touch_app </i>
-              </button>
-
-              <button mat-icon-button>
-              <i class="material-icons" style="opacity: 0.5;"> person_add </i>
-              </button>
-
-              <app-change-color  (eventEmit)=eventOccuredcolor($event) ></app-change-color>
-
-              <button mat-icon-button>
-              <i class="material-icons" style="opacity: 0.5;">photo</i>
-              </button>
-
-              <app-archive  (eventEmit)=eventOccured($event) ></app-archive>
-
-            <app-more (labelEvent)=eventlabel($event) ></app-more>
-
-            <button mat-icon-button>
-            <i class="material-icons" style="opacity: 0.5;">rotate_left </i>
-            </button>
-
-            <button mat-icon-button>
-            <i class="material-icons" style="opacity: 0.5;">rotate_right</i>
-            </button>
-
-            <button mat-button style="float:right" (click)="note1=!note1; postValue();" (clickOutside)="(note1=false)"> Close</button>
-            </mat-card-actions>
-
-          </mat-card>
-
+      <button
+        mat-button
+        class="close"
+        (click)="note1 = !note1; postValue()"
+        (clickOutside)="note1 = false"
+      >
+        Close
+      </button>
+    </mat-card-actions>
+  </mat-card>
 </div>
