--- a/my-project/src/app/components/forget/forget.component.html
+++ b/my-project/src/app/components/forget/forget.component.html
@@ -1,29 +1,29 @@
 <div class="container" fxLayout>
-  <div class="item item-1" fxFlex="33%" fxFlex.xs = "0" fxFlex.sm = "8"></div>
-  <div fxFlex = "34" fxFlex.xs = "100" fxFlex.sm = "84">
-  <div fxLayout="column" fxLayoutGap = "20%">
-    <div class="item item-1" fxFlex="33%" fxFlex.xs = "0" fxFlex.sm = "8"></div>
-    <div fxFlex = "34%" fxFlex.xs = "100" fxFlex.sm = "84" [formGroup]='rForm' >
-      <mat-card class="card">
-        <div style="padding: 30px 0px;">
+  <div class="item item-1" fxFlex="33%" fxFlex.xs="0" fxFlex.sm="8"></div>
+  <div fxFlex="34" fxFlex.xs="100" fxFlex.sm="84">
+    <div fxLayout="column" fxLayoutGap="20%">
+      <div class="item item-1" fxFlex="33%" fxFlex.xs="0" fxFlex.sm="8"></div>
+      <div fxFlex="34%" fxFlex.xs="100" fxFlex.sm="84" [formGroup]='rForm'>
+        <mat-card class="card">
+          <div  class="maindiv">
 
-          <img src="../../../assets/images/google.svg"alt="google" class="center">
-          <mat-card-title >Forget Password</mat-card-title>
-          <mat-card-subtitle>to continue to your account</mat-card-subtitle>
-          <mat-form-field id="field1">
-            <input matInput placeholder="Email" formControlName="email" [(ngModel)]="model.uname" >
-            <mat-error class="alert" *ngIf="!rForm.controls['email'].valid && rForm.controls['email'].touched">provide a valid email</mat-error>  
-          </mat-form-field>
-          <a routerLink="/login" id="link">Back to Login</a>
-         
-          <button mat-flat-button id="button"[disabled]="!rForm.valid" (click)="reset()">Submit</button>
-          
-        </div>
-      </mat-card>
+            <img src="../../../assets/images/google.svg" alt="google" class="center">
+            <mat-card-title>Forget Password</mat-card-title>
+            <mat-card-subtitle>to continue to your account</mat-card-subtitle>
+            <mat-form-field id="field1">
+              <input matInput placeholder="Email" formControlName="email" [(ngModel)]="model.uname">
+              <mat-error class="alert" *ngIf="!rForm.controls['email'].valid && rForm.controls['email'].touched">provide a valid email</mat-error>
+            </mat-form-field>
+            <a routerLink="/login" id="link">Back to Login</a>
+
+            <button mat-flat-button id="button" [disabled]="!rForm.valid" (click)="reset()">Submit</button>
+
+          </div>
+        </mat-card>
+      </div>
+      <div class="item item-1" fxFlex="33%" fxFlex.xs="0" fxFlex.sm="8"></div>
     </div>
-    <div class="item item-1" fxFlex="33%"fxFlex.xs = "0" fxFlex.sm = "8"></div>
   </div>
-</div>
-<div class="item item-1" fxFlex="33%" fxFlex.xs = "0" fxFlex.sm = "8"></div>
+  <div class="item item-1" fxFlex="33%" fxFlex.xs="0" fxFlex.sm="8"></div>
 </div>
 <router-outlet></router-outlet>
