--- a/my-project/src/app/components/label-notes/label-notes.component.html
+++ b/my-project/src/app/components/label-notes/label-notes.component.html
@@ -1,1 +1,2 @@
-<app-notes-collection [NoteArray]=labelNOtes (onNewEntryDeleted)= "addNewEntry($event)" (update)="change($event)" (onNewColorChange)="addNewEntry($event)"(eventEmit)="eventLabel($event)" ></app-notes-collection>
+<app-notes-collection [NoteArray]=labelNOtes (onNewEntryDeleted)="addNewEntry($event)" (update)="change($event)" (onNewColorChange)="addNewEntry($event)"
+  (eventEmit)="eventLabel($event)"></app-notes-collection>
