--- a/my-project/src/app/components/login/login.component.css
+++ b/my-project/src/app/components/login/login.component.css
@@ -1,22 +1,21 @@
-
-  .container > * {
-    width: 100%;
-  }
-  #field1
-  {
-    width: 100%
-  }
-  .center {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 25%;
+.container > * {
+  width: 100%;
 }
-#button
-{
-  float:right;
+#field1 {
+  width: 100%;
 }
-a
-{
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 25%;
+}
+#button {
+  float: right;
+}
+a {
   text-decoration: none;
+}
+.div1 {
+  padding: 30px 0px;
 }
