--- a/my-project/src/app/components/more/more.component.css
+++ b/my-project/src/app/components/more/more.component.css
@@ -1,16 +1,24 @@
-.textarea{
-  width:90%;
+.textarea {
+  width: 90%;
   outline: none;
 }
-.textarea:empty:before{
+.textarea:empty:before {
   content: attr(data-text);
   opacity: 0.5;
   font-size: 12px;
 }
-.area
-{
-  white-space:nowrap;
-  text-overflow:ellipsis;
+.area {
+  white-space: nowrap;
+  text-overflow: ellipsis;
   overflow: hidden !important;
   outline: none;
+}
+.div1 {
+  width: 257px;
+  padding-left: 10px;
+}
+.div2 {
+  display: flex;
+  align-items: flex-start;
+  font-size: 17px;
 }
