--- a/my-project/src/app/components/update/update.component.css
+++ b/my-project/src/app/components/update/update.component.css
@@ -1,57 +1,60 @@
-.matcard
-{
-    width: 600px;
-   height:auto;
-
-
+.matcard {
+  width: 600px;
+  height: auto;
 }
-.span{
-    top: 10px;
-    right: 0px;
-    position: absolute;
+.span {
+  top: 10px;
+  right: 0px;
+  position: absolute;
 }
 
-.div2{
-
-    outline: none;
-    width: 550px;
-    position: relative;
+.div2 {
+  outline: none;
+  width: 550px;
+  position: relative;
 }
 div:empty:before {
-    content:attr(data-text);
-    color:gray
-  }
+  content: attr(data-text);
+  color: gray;
+}
 
-.take_note{
-    padding-top: 12px;
-    padding-left: 14px;
-    padding-bottom: 0px
+.take_note {
+  padding-top: 12px;
+  padding-left: 14px;
+  padding-bottom: 0px;
 }
 ::ng-deep .mat-dialog-container {
-  box-shadow: 0 11px 15px -7px rgba(0,0,0,.2), 0 24px 38px 3px rgba(0,0,0,.14), 0 9px 46px 8px rgba(0,0,0,.12);
+  box-shadow: 0 11px 15px -7px rgba(0, 0, 0, 0.2),
+    0 24px 38px 3px rgba(0, 0, 0, 0.14), 0 9px 46px 8px rgba(0, 0, 0, 0.12);
   display: block;
-  padding:0px;
+  padding: 0px;
   border-radius: 2px;
   box-sizing: border-box;
-   overflow:hidden;
-   overflow-y: auto;
+  overflow: hidden;
+  overflow-y: auto;
   outline: 0;
   width: 100%;
   height: 100%;
   min-height: inherit;
   max-height: inherit;
 }
-.mat-card-actions, .mat-card-content, .mat-card-subtitle, .mat-card-title {
+.mat-card-actions,
+.mat-card-content,
+.mat-card-subtitle,
+.mat-card-title {
   display: block;
-   margin-bottom: 0px;
+  margin-bottom: 0px;
 }
 mat-card-actions {
- margin-left: 0px;
+  margin-left: 0px;
   margin-right: 0px;
   padding: 0px 0px;
 }
-.mat-card>.mat-card-actions:last-child {
+.mat-card > .mat-card-actions:last-child {
   margin-bottom: -16px;
   padding-bottom: 0;
   padding-right: 30px;
+}
+.float {
+  float: right;
 }
